testcrate/ui/forget-ok.stderr
warning: use of deprecated item 'futures': `futures-await` has been merged into the main `futures` repository, please switch to depending directly on `futures` with the `nightly` feature activated
 --> $DIR/forget-ok.rs:3:1
  |
3 | extern crate futures_await as futures;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: #[warn(deprecated)] on by default

error[E0308]: mismatched types
 --> $DIR/forget-ok.rs:8:28
  |
8 |   fn foo() -> Result<(), ()> {
  |  ____________________________^
9 | | }
  | |_^ expected enum `std::result::Result`, found ()
  |
  = note: expected type `std::result::Result<(), ()>`
             found type `()`

error[E0308]: mismatched types
  --> $DIR/forget-ok.rs:12:29
   |
12 |   fn foos() -> Result<(), ()> {
   |  _____________________________^
13 | | }
   | |_^ expected enum `std::result::Result`, found ()
   |
   = note: expected type `std::result::Result<(), ()>`
              found type `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
